--- a/example/browser/table.html
+++ b/example/browser/table.html
@@ -29,7 +29,7 @@
     <div style="height: 20px;"></div>
 
     <div class="table-responsive">
-      <table id="table" class="table table-hover table-bordered">
+      <table id="table" class="table table-bordered">
         <thead></thead>
         <tbody></tbody>
       </table>
