DQL Table Explorer: Support tokens.

--- a/web/explore/index.html
+++ b/web/explore/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DQL Table Explorer</title>
+    <title>DQL Explorer</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -44,7 +44,7 @@
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js"></script>
 
-    <script src="table.dart" type="application/dart"></script>
-    <script src="dart.js"></script>
+    <script src="explore.dart" type="application/dart"></script>
+    <script src="../dart.js"></script>
   </body>
 </html>
